# djangoProject_1

./: db.sqlite3  pyproject.toml
data/: ads.json  categories.json  csv_in_json.py  user.json
djangoProject_1/: asgi.py  settings.py  urls.py  wsgi.py
eds/: admin.py  models.py  permissions.py  serializers.py  validators.py  views.py
eds/migrations/: 0001_initial.py  0002_alter_ad_options_alter_category_options_and_more.py  0002_initial.py
eds/urls/: ad.py  cat.py  selection.py
eds/views/: ad.py  cat.py  selection.py
users/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_role.py  0003_alter_location_options_alter_user_options.py
