[tool.poetry]
name = "djangoproject-1"
version = "0.1.0"
description = ""
authors = ["hits2405 <hits13@mail.ru>"]
readme = "README.md"
packages = [{include = "djangoproject_1"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.4"
psycopg2 = "^2.9.5"
pillow = "^9.4.0"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
python-dateutil = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
